# python3-palworld-rcon

./: README.md  app.py  config.example.yaml  palworld-rcon.service  pyproject.toml
core/: callbacks.py  webserver.py
plugins/: playerstatus.py
